# szu-net-login

./: README.md  pyproject.toml
src/: core.py
src/szu_drcom_login/: __init__.py
src/szu_net_login/: __init__.py
tests/: __init__.py
