[project]
name = "szu-drcom-login"
version = "0.4.0"
description = "A helper script to login szu's drcom network."
authors = [
    {name = "Meson Jiang", email = "jiang131072@gmail.com"},
]
dependencies = [
    "schedule>=1.2.1",
    "selenium>=4.20.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[project.scripts]
szu-drcom-login = "szu_drcom_login:main"