[project]
name = "szu-net-login"
version = "0.1.0"
description = "Auxiliary script for logging into the SZU's teaching area network"
readme = "README.md"
authors = [
    { name = "jiang131072", email = "jiang131072@gmail.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "selenium>=4.29.0",
]

[project.scripts]
szu-net-login = "szu_net_login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
